Updated links to GitHub and Netlify

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/cechinaka" target="_blank">Christie Chinaka</a> and is
+          <a href="https://github.com/cechinaka/SCPlus6.Homework" target="_blank"> on GitHub</a> and
+          <a href="https://n5m7qc-1234.csb.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
