--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="https://github.com/cechinaka" target="_blank">Christie Chinaka</a> and is
           <a href="https://github.com/cechinaka/SCPlus6.Homework" target="_blank"> on GitHub</a> and
-          <a href="https://n5m7qc-1234.csb.app/" target="_blank">hosted on Netlify</a>
+          <a href="clinquant-unicorn-0b740c.netlify.app" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
